优化 ApplicationSessionContext 中的会话处理逻辑，增加日志记录以便于调试；简化并行处理逻辑，提升代码可读性和性能